tests/ui/consts/issue-17458.stderr
error: pointers cannot be cast to integers during const eval
  --> $DIR/issue-17458.rs:1:28
   |
LL | static X: usize = unsafe { core::ptr::null::<usize>() as usize };
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: at compile-time, pointers do not have an integer value
   = note: avoiding this restriction via `transmute`, `union`, or raw pointers leads to compile-time undefined behavior

error: aborting due to 1 previous error

